Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7833

Audit and fix other string builtins for long string handling

    XMLWordPrintableJSON

Details

    Description

      Following on from IMPALA-7822, there are some other string builtins that seem to follow the same pattern of having a string size overflow an int passed into the StringVal constructor. I think in some cases we get lucky and it works out, but others it seems possible to crash given the right input values.

      Here are some examples of cases where we can hit such bugs:

      select lpad('foo', 17179869184 , ' ');
      select rpad('foo', 17179869184 , ' ');
      select space(17179869184 );
      

      Attachments

        Activity

          People

            akovacs Akos Kovacs
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: